; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_mailmap.c_git_mailmap_add_entry.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_mailmap.c_git_mailmap_add_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_mailmap_add_entry(i32* %0, i8* %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %18

15:                                               ; preds = %5
  %16 = load i8*, i8** %7, align 8
  %17 = call i32 @strlen(i8* %16)
  br label %19

18:                                               ; preds = %5
  br label %19

19:                                               ; preds = %18, %15
  %20 = phi i32 [ %17, %15 ], [ 0, %18 ]
  %21 = load i8*, i8** %8, align 8
  %22 = load i8*, i8** %8, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %24, label %27

24:                                               ; preds = %19
  %25 = load i8*, i8** %8, align 8
  %26 = call i32 @strlen(i8* %25)
  br label %28

27:                                               ; preds = %19
  br label %28

28:                                               ; preds = %27, %24
  %29 = phi i32 [ %26, %24 ], [ 0, %27 ]
  %30 = load i8*, i8** %9, align 8
  %31 = load i8*, i8** %9, align 8
  %32 = icmp ne i8* %31, null
  br i1 %32, label %33, label %36

33:                                               ; preds = %28
  %34 = load i8*, i8** %9, align 8
  %35 = call i32 @strlen(i8* %34)
  br label %37

36:                                               ; preds = %28
  br label %37

37:                                               ; preds = %36, %33
  %38 = phi i32 [ %35, %33 ], [ 0, %36 ]
  %39 = load i8*, i8** %10, align 8
  %40 = load i8*, i8** %10, align 8
  %41 = call i32 @strlen(i8* %40)
  %42 = call i32 @mailmap_add_entry_unterminated(i32* %11, i8* %12, i32 %20, i8* %21, i32 %29, i8* %30, i32 %38, i8* %39, i32 %41)
  ret i32 %42
}

declare dso_local i32 @mailmap_add_entry_unterminated(i32*, i8*, i32, i8*, i32, i8*, i32, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
